# 3d-world

./: .gitignore  CMakeLists.txt  README.md  RULE.txt
assets/shader/: shader.fs  shader.vs  snake.fs  snake.vs
automotive-simulator/: CMakeLists.txt
automotive-simulator/src/: main.cpp
src/: camera.cpp  colors.hpp  controller.cpp  controller.hpp  main.cpp  shader.cpp  shader.hpp
src/adapter/: CMakeLists.txt
src/adapter/in/: CMakeLists.txt
src/adapter/in/include/: controller_opengl.hpp  simulation_cli_adapter.hpp
src/adapter/in/src/: controller_opengl.cpp  simulation_cli_adapter.cpp
src/adapters/: CMakeLists.txt
src/adapters/include/: v2x.hpp  vision.hpp
src/adapters/src/: v2x.cpp  vision.cpp
src/app/: CMakeLists.txt  main.cpp
src/application/: CMakeLists.txt  engine.cpp  engine.hpp
src/application/domain/: CMakeLists.txt
src/application/domain/model/: CMakeLists.txt
src/application/domain/model/include/: pedestrian.hpp  vector2.hpp  vehicle.hpp  world.hpp
src/application/domain/model/src/: pedestrian.cpp  vehicle.cpp  world.cpp
src/application/domain/service/: CMakeLists.txt
src/application/domain/service/include/: engine.hpp  simulation_service.hpp  simulation_types.hpp
src/application/domain/service/src/: engine.cpp  simulation_service.cpp
src/application/include/: camera_controller.hpp  engine.hpp  input_controller.hpp  prefabs.hpp  third_person_camera_controller.hpp
src/application/port/in/: CMakeLists.txt
src/application/port/in/include/: run_simulation_use_case.hpp  scenario_input_port.hpp  simulation_runner.hpp
src/application/src/: engine.cpp  input_controller.cpp  prefabs.cpp  third_person_camera_controller.cpp
src/application/usecase/: CMakeLists.txt
src/application/usecase/include/: run_simulation_service.hpp
src/application/usecase/src/: run_simulation_service.cpp
src/assembly/: CMakeLists.txt
src/assembly/include/: application_builder.hpp
src/assembly/src/: application_builder.cpp
src/common/: CMakeLists.txt
src/common/include/: scope_guard.hpp
src/common/src/: scope_guard.cpp
src/core/: CMakeLists.txt
src/core/include/: pedestrian.hpp  sensor-provider.hpp
src/core/src/: pedestrian.cpp
src/ecs/: CMakeLists.txt  component.hpp  component_array.hpp  light_system.hpp  registry.hpp  render_system.hpp
src/ecs/component/include/: component.hpp  component_array.hpp
src/ecs/entity/include/: world.hpp
src/ecs/systems/include/: camera_system.hpp  light_system.hpp  orbit_camera_system.hpp  player_movement_system.hpp  render_system.hpp  third_person_camera_system.hpp
src/engine/: camera.cpp  camera.hpp  engine.cpp  engine.hpp
src/graphics/: CMakeLists.txt  renderer.cpp
src/graphics/assets/: shader_fragment  shader_vertex
src/graphics/include/: camera.hpp  gl_includes.hpp  mesh.hpp  primitives.hpp  render_data.hpp  renderer.hpp  shader.hpp
src/graphics/shaders/: shader.hpp
src/graphics/src/: camera.cpp  mesh.cpp  primitives.cpp  renderer.cpp
src/input/: camera_controller.cpp  camera_controller.hpp  input_controller.cpp  input_controller.hpp
src/renderer/: colors.hpp  shader.cpp  shader.hpp
